k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-pubsub
  labels:
    app: redis-pubsub
    environment: base
