k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-pubsub-app-service
  namespace: redis-pubsub
  labels:
    app: redis-pubsub-app
    component: application
spec:
  type: ClusterIP
  ports:
  - port: 8445
    targetPort: 8445
    protocol: TCP
    name: http-port
  selector:
    app: redis-pubsub-app
    component: application
