k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis-pubsub
  labels:
    app: redis
    component: database
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis-port
  selector:
    app: redis
    component: database
